Работа с GIT и GITHUB

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body style="background-color: #1C1B21; text-align: #fff;">
+    <img src="./logo.svg" alt="">
 
     <script src="./app.js"></script>
 </body>
